# rxy_ui

./: .gitignore  Cargo.toml  LICENSE-MIT  README-zh-Hans.md  README.md  game_menu-0059308.mm_profdata  rustfmt.toml
crates/hooked_collection/: Cargo.toml
crates/hooked_collection/src/: hooked_map.rs  hooked_vec.rs  lib.rs  map_operation.rs  operation_record.rs  sender.rs  vec_operation.rs
crates/rxy_bevy/: Cargo.toml
crates/rxy_bevy/src/: cmd.rs  command.rs  entity_extra_data.rs  event.rs  focusable.rs  lib.rs  nest.rs  plugin.rs  renderer.rs  res.rs  res_change_observe.rs  vec_data_source.rs  world_ext.rs  wrapper.rs
crates/rxy_bevy/src/element/: attr_parse.rs  attrs.rs  event.rs  mod.rs
crates/rxy_bevy/src/navigation/: mod.rs
crates/rxy_bevy/src/reactive/: mod.rs
crates/rxy_bevy/src/renderer/: attr_parse.rs  attr_value.rs  attrs.rs  common_renderer.rs  composite_attrs.rs  element.rs  event.rs  into_attr.rs  into_attr_value.rs  mod.rs  node_tree.rs  tailwind_attrs.rs  text_styled_element.rs  view.rs  view_builder_ext.rs  view_key.rs
crates/rxy_bevy/src/renderer/elements/: div.rs  img.rs  mod.rs  span.rs
crates/rxy_bevy/src/renderer/style/: mod.rs  (+14 more)
crates/rxy_bevy/src/view/: mod.rs  res.rs  str.rs  system.rs  system_once.rs
crates/rxy_bevy/src/view_member/: attr.rs  bundle.rs  composite_attrs.rs  event.rs  into_attr.rs  into_attr_value.rs  mod.rs
crates/rxy_bevy_ecs/: Cargo.toml
crates/rxy_bevy_ecs/src/: lib.rs
crates/rxy_bevy_ecs/src/renderer/: mod.rs  node_tree.rs  view_key.rs
crates/rxy_bevy_element/: Cargo.toml
crates/rxy_bevy_element/src/: ecs_fns.rs  entity_extra_data.rs  lib.rs
crates/rxy_bevy_element/src/element_attrs/: attr_values.rs  attrs.rs  composite_attrs.rs  mod.rs  world_ext.rs
crates/rxy_bevy_element/src/element_core/: attr_value.rs  element_type.rs  element_unit_attr.rs  macro.rs  mod.rs
crates/rxy_bevy_element/src/elements/: element_input.rs  element_svg.rs  element_text.rs  element_view.rs  mod.rs
crates/rxy_bevy_element/src/smallbox/: mod.rs  small_box.rs  smallbox.rs
crates/rxy_bevy_element/src/text_styled_element/: mod.rs
crates/rxy_bevy_macro/: Cargo.toml
crates/rxy_bevy_macro/src/: force_dynamic_view.rs  into_view.rs  lib.rs  schema.rs
crates/rxy_bevy_style/: Cargo.toml
crates/rxy_bevy_style/src/: attr_iter.rs  attr_style_owner.rs  attr_syncer.rs  element_view_ext.rs  entity_world_ref.rs  focus_style.rs  interaction_style.rs  into_view_member.rs  lib.rs  node_style_state.rs  plugin.rs  shared_style_sheets.rs  shared_style_view.rs  style_sheet_definition.rs  style_sheet_items.rs  style_sheets.rs  tailwind_attrs.rs  view_member.rs
crates/rxy_bevy_ui_components/: Cargo.toml
crates/rxy_bevy_ui_components/src/: checkbox.rs  lib.rs  select.rs  slider.rs
crates/rxy_core/: Cargo.toml
crates/rxy_core/src/: build_info.rs  clone_to.rs  common_renderer.rs  diff.rs  either.rs  element_type.rs  element_view.rs  into_view.rs  into_view_member.rs  lib.rs  maybe_traits.rs  member_after_children.rs  member_owner.rs  mutable_view.rs  nest.rs  rebuild.rs  reflect.rs  remove_on_drop.rs  renderer.rs  static.rs  styled.rs  test.rs  view.rs  view_member.rs  view_state.rs
crates/rxy_core/src/common_renderer/: composite_attrs.rs  mod.rs  tailwind_attrs.rs
crates/rxy_core/src/element/: attr_value.rs  attrs.rs  dynamic_element.rs  element.rs  element_attr.rs  element_attr_member.rs  element_attr_type.rs  element_children.rs  element_type.rs  into_attr.rs  into_attr_value.rs  mod.rs  test.rs  view_member.rs
crates/rxy_core/src/impl/: build_configure.rs  builder.rs  context.rs  dynamic.rs  either.rs  element.rs  element_children.rs  erasure.rs  future.rs  iter_data_keyed.rs  mod.rs  option.rs  reactive.rs  rebuild_fn_receiver.rs  recyclable.rs  reflect.rs  result.rs  static.rs  stream.rs  stream_with_default_value.rs  to_mutable.rs  virtual_container.rs  x_if.rs  x_if2.rs  x_iter.rs  x_iter_source.rs  x_world.rs
crates/rxy_core/src/reactive/: map.rs  mod.rs  schema_param.rs  schema_prop.rs  state.rs
crates/rxy_core/src/renderers/: bevy.rs  mod.rs  native.rs
crates/rxy_core/src/schema/: context.rs  controlled_state.rs  ctx.rs  element.rs  event.rs  fn.rs  mod.rs  param.rs  prop.rs  prop_state.rs  prop_value_wrapper.rs  props.rs  reactive.rs  required_param.rs  schema_with_element_view_bound.rs  slot.rs  view.rs  wrapper.rs
crates/rxy_core/src/slot/: mod.rs
crates/rxy_core/src/smallbox/: mod.rs  small_box.rs  space.rs
crates/rxy_core/src/style/: attr_style_owner.rs  mod.rs  style_sheet_definition.rs  style_sheet_items.rs  view_member.rs
crates/rxy_core/src/utils/: mod.rs  on_drop.rs  synccell.rs
crates/rxy_native/: Cargo.toml
crates/rxy_native/src/: app.rs  draw.rs  draw_text.rs  layout.rs  lib.rs  running_app.rs  user_event.rs  window.rs  world_ext.rs
crates/rxy_native/src/renderer/: attr_values.rs  attrs.rs  common_renderer.rs  composite_attrs.rs  geometry.rs  mod.rs  node_bundles.rs  node_tree.rs  tailwind_attrs.rs  ui_node.rs  view_key.rs  visibility.rs
crates/rxy_web_dom/: Cargo.toml  README.md
crates/rxy_web_dom/src/: lib.rs  renderer.rs
crates/rxy_web_dom/src/renderer/: attr_values.rs  attrs.rs  common_renderer.rs  event.rs  mod.rs
crates/xy_reactive/: Cargo.toml  README.md
crates/xy_reactive/examples/: playground.rs
crates/xy_reactive/src/: arena.rs  context.rs  effect.rs  lib.rs  memo.rs  notify.rs  render_effect.rs  selector.rs  serde.rs  serialization.rs  signal_get_ext.rs  signal_traits.rs  source.rs  spawn.rs
crates/xy_reactive/src/async_signal/: derived.rs  mod.rs  resource.rs
crates/xy_reactive/src/shared_context/: hydrate.rs  mod.rs  ssr.rs
crates/xy_reactive/src/signal/: arc_signal.rs  mod.rs  read.rs  trigger.rs  write.rs
crates/xy_reactive/src/store/: indexed.rs  keyed.rs  mod.rs  path.rs  stored.rs
crates/xy_reactive/tests/: effect.rs  memo.rs  signal.rs
examples/web_playground/: Cargo.toml  README.md  index.html
examples/web_playground/src/: lib.rs
examples/web_playground/www/: .gitignore  index.html  index.js  package-lock.json  package.json  pnpm-lock.yaml
(+50 files in other folders)
