[package]
edition = "2021"
name = "rxy_bevy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rxy_bevy_element.workspace = true
rxy_bevy_macro.workspace = true
rxy_core = {workspace = true, features = ["async-channel"]}
rxy_macro.workspace = true

glam.workspace = true
serde.workspace = true

count-macro.workspace = true
paste.workspace = true

async-channel.workspace = true

bevy_app.workspace = true
bevy_asset.workspace = true
bevy_core.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
bevy_mod_picking.workspace = true
bevy_reflect.workspace = true
bevy_render.workspace = true
bevy_sprite.workspace = true
bevy_tasks.workspace = true
bevy_text.workspace = true
bevy_transform.workspace = true
bevy_ui.workspace = true
bevy_utils.workspace = true

futures-lite.workspace = true

# cosmic-text.workspace = true

oneshot.workspace = true

xy_reactive = {workspace = true, optional = true}

[features]
default = ["view_erasure"]
view_erasure = ["rxy_core/view_erasure"]
