[package]
edition = "2021"
name = "rxy_bevy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rxy_bevy_element.workspace = true
rxy_bevy_macro.workspace = true
rxy_core = { workspace = true, features = ["common_renderer", "async-channel", "bevy", "xy_reactive", "bevy_reflect", "x_iter_source"] }
xy_reactive = { workspace = true, optional = true, features = ["bevy"] }
bevy_color = { workspace = true }
rxy_bevy_ecs = { path = "../rxy_bevy_ecs" }
bevy_async_x = { git = "https://github.com/ycysdf/bevy_async_x", branch = "main", optional = true }
rxy_macro.workspace = true
hooked_collection.workspace = true

glam.workspace = true
serde.workspace = true

count-macro.workspace = true
paste.workspace = true

async-channel.workspace = true
async-broadcast.workspace = true

smallvec.workspace = true

bevy_app.workspace = true
bevy_asset = { workspace = true, optional = false }
bevy_text = { workspace = true, optional = false }
bevy_transform = { workspace = true, optional = false }
bevy_render.workspace = true
bevy_ui.workspace = true
bevy_core.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
bevy_mod_picking.workspace = true
bevy_reflect = { workspace = true, features = ["bevy"] }
#bevy_sprite.workspace = true
bevy_tasks.workspace = true
bevy_utils.workspace = true
#bevy_a11y.workspace = true
bevy_input.workspace = true
bevy_window.workspace = true

futures-lite.workspace = true

# cosmic-text.workspace = true

oneshot.workspace = true

[features]
default = ["xy_reactive", "tailwind_aliases", "dynamic_element", "flexbox", "grid"]
tailwind_aliases = []
async_x = ["bevy_async_x"]
dynamic_element = []
style = ["rxy_core/style"]
grid = []
flexbox = []