[package]
edition = "2021"
name = "rxy_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rxy_macro.workspace = true
xy_reactive = { workspace = true, optional = true }
bevy_reflect = { workspace = true, optional = true }
pin-project = { workspace = true, optional = true }

ahash.workspace = true
hashbrown.workspace = true
bevy_utils = { workspace = true, optional = true }

async-channel = { workspace = true, optional = true }
hooked_collection = { workspace = true, optional = true }
drain_filter_polyfill.workspace = true
futures-lite.workspace = true
indexmap.workspace = true
once_cell.workspace = true
oneshot.workspace = true
# serde.workspace = true


count-macro.workspace = true
paste.workspace = true

[features]
default = ["std", "view_erasure", "async-channel", "either_future", "send_sync"]
send_sync = []
std = []
bevy = ["std", "send_sync", "bevy_utils"]
view_erasure = []
xy_reactive = ["dep:xy_reactive", "send_sync"]
bevy_reflect = ["dep:bevy_reflect", "std", "send_sync"]
x_iter_source = ["hooked_collection", "async-channel"]
either_future = ["pin-project"]
