[package]
edition = "2021"
name = "rxy_native"
version = "0.1.0"

[dependencies]
raw-window-handle = "0.6"
rxy_core = { workspace = true, features = ["common_renderer", "native", "async-channel", "xy_reactive"] }
vello = { version = "0.1.0" }
xy_reactive = { workspace = true, optional = true, default-features = false }
glam = { workspace = true }
bevy_reflect = { workspace=true, optional = true, default-features = false, features = ["glam"] }
bevy_ecs = { workspace=true, default-features = false }
bevy_hierarchy = { workspace=true, default-features = false }
rxy_bevy_ecs = { path = "../rxy_bevy_ecs" }

mint = "0.5"
smallvec.workspace = true
#bevy_ecs = { workspace = true, default-features = false }
bitflags = "2"
kurbo = { version = "0.11", features = ["mint"] }
taffy = { version = "0.4", default-features = false, features = ["taffy_tree", "std"] }
tracing = "0.1"
wgpu = "0.19"
winit = "0.29"
thiserror = "1.0"

paste.workspace = true
count-macro.workspace = true

serde = { version = "1.0", features = ["derive"], optional = true }
image = "0.25"
cfg-if = "1.0"
compio = { version = "0.9", optional = true }
tokio = { version = "1", default-features = false, optional = true, features = ["rt", "rt-multi-thread"] }

[features]
default = ["tokio", "flexbox"]
#default = ["tokio", "flexbox", "dynamic_element", "reflect"]
serialize = ["dep:serde", "taffy/serde", "kurbo/serde", "glam/serde"]
reflect = ["bevy_reflect", "rxy_core/bevy_reflect", "bevy_ecs/bevy_reflect"]
grid = ["taffy/grid"]
flexbox = ["taffy/flexbox"]
block_layout = ["taffy/block_layout"]
dynamic_element = ["rxy_core/dynamic_element"]
