[package]
name = "xy_reactive"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
futures = "0.3"
lazy_static = "1"
parking_lot = "0.12"
pin-project-lite = "0.2"
rustc-hash = "1"
serde_json = "1"
slotmap = "1"
smallvec = "1"
thiserror = "1"
bevy_tasks = { version = "0.12", features = ["multi-threaded"], optional = true }
serde = { version = "1", features = ["derive"], optional = false }
glib = { version = "0.18", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
tracing = { version = "0.1.40", optional = true }

# serialization formats
serde-lite = { version = "0.5", optional = true }
miniserde = { version = "0.1", optional = true }
rkyv = { version = "0.7.39", features = [
    "validation",
    "uuid",
    "strict",
], optional = true }
base64 = { version = "0.21", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[features]
default = []
bevy = ["dep:bevy_tasks"]
glib = ["dep:glib"]
hydration = []
serde = [
    #    "dep:serde"
]
tracing = ["dep:tracing"]
tokio = ["dep:tokio"]
web = [
    "dep:js-sys",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
miniserde = ["dep:miniserde"]
rkyv = ["dep:rkyv", "dep:base64"]
serde-lite = ["dep:serde-lite"]


[[example]]
name = "playground"
path = "examples/playground.rs"